--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "test:ci": "npm run lint && npm run test:unit"
   },
   "dependencies": {
-    "axios": "0.18.1",
+    "axios": "^0.23.0",
     "core-js": "3.6.5",
     "echarts": "^4.2.1",
     "echarts4": "npm:echarts@^4.2.1",
     "element-ui": "2.13.2",
+    "file-saver": "^2.0.5",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
@@ -27,7 +28,8 @@
     "vue-axios": "^3.2.4",
     "vue-count-to": "^1.0.13",
     "vue-router": "3.0.6",
-    "vuex": "3.1.0"
+    "vuex": "3.1.0",
+    "xlsx": "^0.17.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
