--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue": "2.6.10",
     "vue-axios": "^3.2.4",
     "vue-count-to": "^1.0.13",
+    "vue-json-excel": "^0.3.0",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
     "xlsx": "^0.17.3"
